[tool.poetry]
name = "repl_nix_absrlambda"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
requests = "^2.28.2"
selenium = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
